--- a/views/counters.handlebars
+++ b/views/counters.handlebars
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/greet.css">
     <title>Document</title>
 </head>
 <body>
-    <h1> how many times a person is greeted</h1>
+    <div class="message">
+    <h1> <strong>how many times a person is greeted</strong></h1>
     <ul>
         <li><p>Hello,{{enterName}} has been greeted {{counter}} times</p></li>
     </ul>
+    </div>
 </body>
 </html>
