--- a/views/counters.handlebars
+++ b/views/counters.handlebars
@@ -14,5 +14,8 @@
         <li><p>Hello,{{enterName}} has been greeted {{counter}} times</p></li>
     </ul>
     </div>
+    <form>
+ <input type="button" value="Go back!" onclick="history.back()">
+</form>
 </body>
 </html>
