--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -1,11 +1,13 @@
 body {
-    background: linear-gradient(135deg,pink,#0d1137);
+    background: linear-gradient(135deg,orange,yellow);
     text-align: center;
     box-sizing: border-box;
+  
    
     
     
     }
+   
     .header{
         margin: auto;
         margin-bottom: 100px;
@@ -37,20 +39,23 @@ body {
         font-size: xx-large;
     }
     .btn{
-        padding: 10px;
-        margin: 10px;
-        font-size: medium;
+        padding: 40px;
+        margin: 40px;
+        font-size: xx-large;
     }
     .pop-up{
         font-size: xx-large;
+        /* text-align:left ; */
+
+        
     }
     .counter{
         text-align: center;
         font-size: medium;
     }
     .counterbtn{
-        font-size:large;
-       margin-top: 10px;
+        font-size:x-large;
+       margin-top: 50px;
        
        
     }
@@ -61,7 +66,7 @@ body {
     .list {
         display: inline;
         font-size: xx-large;
-        margin: 30px;
+        margin: 50px;
         
     }
     .message {
