--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -1,19 +1,28 @@
 body {
-    background: linear-gradient(135deg,orange,yellow);
-    text-align: center;
-    box-sizing: border-box;
-  
-   
-    
-    
-    }
-   
+    margin:0;
+    padding:0;
+    font-family: sans-serif;
+    background: gray;
+    color: white;
+  }
     .header{
         margin: auto;
         margin-bottom: 100px;
         margin-top: 100px;
         font-size: xx-large;
     }
+    .login-box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 600px;
+        padding: 40px;
+        transform: translate(-50%, -50%);
+        background: rgba(0,0,0,.5);
+        box-sizing: border-box;
+        box-shadow: 0 20px 30px rgba(0,0,0,.6);
+        border-radius: 10px;
+      }
     .name-input{
         margin: 50px;
         display: flex;
@@ -38,14 +47,15 @@ body {
     .radio-language{
         font-size: xx-large;
     }
-    .btn{
+    .greetmebtn{
         padding: 40px;
         margin: 40px;
         font-size: xx-large;
+        align-items: center;
     }
     .pop-up{
         font-size: xx-large;
-        /* text-align:left ; */
+        
 
         
     }
@@ -54,8 +64,9 @@ body {
         font-size: medium;
     }
     .counterbtn{
-        font-size:x-large;
+        font-size:large;
        margin-top: 50px;
+       display: flex;
        
        
     }
@@ -64,18 +75,23 @@ body {
         font-size: 20px;
     }
     .list {
-        display: inline;
+        
         font-size: xx-large;
         margin: 50px;
         
     }
     .message {
         font-size: xx-large;
+        text-align: center;
        
        
     }
    ul{
     list-style-type: none; 
+   }
+   .back{
+    font-size: xx-large;
+    text-align: center; 
    }
     
     /* media query */
