--- a/views/counters.handlebars
+++ b/views/counters.handlebars
@@ -15,7 +15,7 @@
     </ul>
     </div>
     <form>
- <input type="button" value="Go back!" onclick="history.back()">
+ <input  class="back" type="button" value="Go back!" onclick="history.back()">
 </form>
 </body>
 </html>
