--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,59 +17,52 @@
         </div>
     </header>
 
-    <section >
-       
-        <form action="/greetings" Method = "POST">
-         
-        {{#if messages.error1}}
-        <span class="error1">{{messages.error1}} </span> 
-       {{/if}}
-        <div class="counter-and-input">
-           
-            <div class="name-input">
-                <span class="detail">name</span>
-                <input type="text" name="enterName" value="" placeholder="enter name" class="name1">
-                 
-            </div>
-            
-            
-            <div class="counter">
-                <h1>counter</h1>
-                <span class="counterClc">{{counter}}</span>
-            </div>
-        </div>
-        
+    <section class="login-box">>
 
-        <div class="radio-language">
-            <input type="radio" name="language" id="lingustic"  value="IsiZulu">IsiZulu
-            <input type="radio" name="language" id="lingustic"  value="English">Engilish
-            <input type="radio" name="language" id="lingustic" value="Italian">Italian
-        </div>
+        <form action="/greetings" Method="POST">
 
-        <div class="greetmebtn">
-            <button class="greetme" type="submit" name="button">greet-me!!</button>
-        </div>
-        
-       
-        
+            {{#if messages.error1}}
+            <span class="error1">{{messages.error1}} </span>
+            {{/if}}
+            <div class="counter-and-input">
+
+                <div class="name-input">
+                    <span class="detail">name</span>
+                    <input type="text" name="enterName" value="" placeholder="enter name" class="name1">
+
+                </div>
+
+
+                <div class="counter">
+                    <h1>counter</h1>
+                    <span class="counterClc">{{counter}}</span>
+                </div>
+            </div>
+
+
+            <div class="radio-language">
+                <input type="radio" name="language" id="lingustic" value="IsiZulu">IsiZulu
+                <input type="radio" name="language" id="lingustic" value="English">Engilish
+                <input type="radio" name="language" id="lingustic" value="Italian">Italian
+            </div>
+
+            <div class="greetmebtn">
+                <button class="greetme" type="submit" name="button">greet-me!!</button>
+            </div>
+
+
+
         </form>
-        <div class="pop-up">
-     {{greetMe}}
- </div>
-
-         <div class="list">
-                 <a href="/greeted"><button type="submit">nameList</button></a>
-            </div>
-         
-       
+        <div class="list">
+            <a href="/greeted"><button type="submit">nameList</button></a>
+        </div>
 
         <button class="counterbtn">reset</button>
 
-       
+        <div class="pop-up">
 
-        
-       
- 
+            {{greetMe}}
+        </div>
 
 
     </section>
