--- a/views/greeted.handlebars
+++ b/views/greeted.handlebars
@@ -16,7 +16,7 @@
 
 <ul>
     {{#each nameList}}
-  <li> <a href="/counters/{{this}}">{{this}}</a></li>
+  <li> <a href="/counters/{{name}}">{{name}}</a></li>
  {{/each}}
 </ul> 
 
