--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,7 +57,7 @@
             <a href="/greeted"><button type="submit">nameList</button></a>
         </div>
 
-        <button class="counterbtn">reset</button>
+       <a href="removeName" ><button class="counterbtn" type="submit" value ="reset" name = "reset">reset</button></a>
 
         <div class="pop-up">
 
