--- a/public/css/greet.css
+++ b/public/css/greet.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin:0;
     padding:0;
     font-family: sans-serif;
@@ -33,7 +33,7 @@ body {
     
     }
     
-    /* display input and conter next to each other */
+  
     .counter-and-input{
         display: flex;
         flex-direction: row;
@@ -94,7 +94,6 @@ body {
     text-align: center; 
    }
     
-    /* media query */
     @media screen and (max-width:600px){
         .radio-language{
             display:flex;
@@ -109,4 +108,62 @@ body {
             font-size: xx-large;
         }
     }
-    
+     */
+
+     body{
+         background-color: peachpuff;
+         font-size: large;
+     }
+
+     h1{
+         font-size: 40px;
+         color: rgb(8, 16, 87);
+         text-align: center;
+         padding: 25px 0;
+     }
+
+     .login-box{
+        width: 50%;
+        margin: 100px auto;
+        border: 2px solid rgb(8, 16, 87);
+        /* transform: translate(-50%, -50%); */
+        background: rgba(0,0,0,.5);
+        box-sizing: border-box;
+        box-shadow: 0 20px 30px rgba(0,0,0,.6);
+        border-radius: 10px;
+        padding: 75px;
+     }
+     .counter-and-input{
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: center;
+        padding-bottom: 35px;
+    }
+    .counter{
+        /* text-align: center; */
+        /* font-size: medium; */
+        padding-left: 10px;
+    }
+
+    .radio-language{
+        padding-bottom: 35px;
+
+    }
+
+    .buttons{
+        padding-bottom: 35px;
+        
+    }
+
+    .buttons a, .buttons button, input{
+        padding: 20px;
+    }
+
+    .radio-language input{
+        padding: 25px;
+    }
+
+    .greetmebtn, .list, .removeName{
+        display: inline-block;
+        padding-left: 15px;
+    }
