--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,12 +12,12 @@
 <body>
 
     <header>
-        <div class="header">
-            <h1>greetings</h1>
-        </div>
+        <hr>
+        <h1>greetings</h1>
+        <hr>
     </header>
 
-    <section class="login-box">>
+    <section class="login-box">
 
         <form action="/greetings" Method="POST">
 
@@ -27,14 +27,14 @@
             <div class="counter-and-input">
 
                 <div class="name-input">
-                    <span class="detail">name</span>
+                    <label class="detail">name</label>
                     <input type="text" name="enterName" value="" placeholder="enter name" class="name1">
 
                 </div>
 
 
                 <div class="counter">
-                    <h1>counter</h1>
+                    <label>counter</label>
                     <span class="counterClc">{{counter}}</span>
                 </div>
             </div>
@@ -46,19 +46,21 @@
                 <input type="radio" name="language" id="lingustic" value="Italian">Italian
             </div>
 
-            <div class="greetmebtn">
+            <div class="buttons">
+                <div class="greetmebtn">
                 <button class="greetme" type="submit" name="button">greet-me!!</button>
+            </div>
+            <div class="list">
+                <a href="/greeted"><button type="submit">nameList</button></a>
+            </div>
+
+            <a href="removeName" ><button class="counterbtn" type="submit" value ="reset" name = "reset">reset</button></a>
             </div>
 
 
 
         </form>
-        <div class="list">
-            <a href="/greeted"><button type="submit">nameList</button></a>
-        </div>
-
-       <a href="removeName" ><button class="counterbtn" type="submit" value ="reset" name = "reset">reset</button></a>
-
+       
         <div class="pop-up">
 
             {{greetMe}}
