--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,33 @@
-{{{body}}}
+<!DOCTYPE html>
+<html lang="en">
+
+   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="greet.css">
+    <title>greetings</title>
+<body>
+     <section class="login">
+    {{{body}}}
+     </section>
+     
+     <script>
+     document.addEventListener('DOMContentLoaded',function(){
+    var errors = document.querySelector(".error1");
+    var massage = document.querySelector(".pop-up")
+
+if(errors.innerHTML  !== ' ' || message.innerHTML  !== ' ') {
+
+setTimeout(function () {
+    errors.innerHTML = ' ';
+    massage.innerHTML = ' ';
+
+}, 3000);
+}
+});
+     </script>
+     
+</body>
+</html>
+
