--- a/public/greet.css
+++ b/public/greet.css
@@ -44,26 +44,30 @@
 
     }
 
-    .buttons{
+    /* .buttons{
         padding-bottom: 35px;
+       
         
-    }
+    } */
 
     .buttons a, .buttons button, input{
         padding: 20px;
+        border-radius: 20px
     }
 
     .greetmebtn button{
         padding: 20px;
+        border-radius: 30px;
     }
 
     .radio-language input{
         padding: 25px;
     }
 
-    .greetmebtn, .list, .removeName{
+     .list, .removeName{
         display: inline-block;
         padding-left: 15px;
+        
     }
     .greetmebtn{
         padding: 30px;
