--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/greet.css">
+    <link rel="stylesheet" href="greet.css">
     <title>greetings</title>
 </head>
 
@@ -55,6 +55,7 @@
 
 
         </form>
+        
         <div class="buttons">
             
             <div class="list">
@@ -71,6 +72,8 @@
 
 
     </section>
+    
+
 </body>
 
 
