--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,13 +15,13 @@
      <script>
      document.addEventListener('DOMContentLoaded',function(){
     var errors = document.querySelector(".error1");
-    var massage = document.querySelector(".pop-up")
+    
 
-if(errors.innerHTML  !== ' ' || message.innerHTML  !== ' ') {
+if(errors.innerHTML  !== ' ' )  {
 
 setTimeout(function () {
     errors.innerHTML = ' ';
-    massage.innerHTML = ' ';
+  
 
 }, 3000);
 }
