--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,6 +25,9 @@
                 {{#if messages.error1}}
             <span class="error1">{{messages.error1}} </span>
             {{/if}}
+              {{!-- {{#if messages.success}} --}}
+            <span class="success">{{messages.success}} </span>
+            {{!-- {{/if}} --}}
             </div>
             <div class="counter-and-input">
 
