--- a/public/greet.css
+++ b/public/greet.css
@@ -13,15 +13,14 @@
      }
 
      .login-box{
-        width: 50%;
-        margin: 100px auto;
+        /* width: 50%; */
+        /* margin: 50px auto; */
         border: 2px solid rgb(8, 16, 87);
-        /* transform: translate(-50%, -50%); */
         background: rgba(0,0,0,.5);
         box-sizing: border-box;
-        box-shadow: 0 20px 30px rgba(0,0,0,.6);
+        box-shadow: 0 10px 20px rgba(0,0,0,.6);
         border-radius: 10px;
-        padding: 75px;
+        padding: 30px; 
      }
      .error1{
         color:red;
@@ -44,20 +43,16 @@
 
     }
 
-    /* .buttons{
-        padding-bottom: 35px;
-       
-        
-    } */
-
-    .buttons a, .buttons button, input{
+     input{
         padding: 20px;
         border-radius: 20px
     }
 
-    .greetmebtn button{
+    .btn, button{
         padding: 20px;
         border-radius: 30px;
+       
+
     }
 
     .radio-language input{
@@ -67,6 +62,7 @@
      .list, .removeName{
         display: inline-block;
         padding-left: 15px;
+        align-items: center;
         
     }
     .greetmebtn{
@@ -95,3 +91,39 @@
    .success {
        color:navy;
    }
+   @media screen and (min-width: 600px) {
+    .radio-language{
+        display:flex;
+        text-align: left;
+        margin-left: 40px;
+
+    }
+
+    .login-box{
+        width: 50%;
+        margin: 50px auto;
+        border: 2px solid rgb(8, 16, 87);
+        background: rgba(0,0,0,.5);
+        box-sizing: border-box;
+        box-shadow: 0 10px 20px rgba(0,0,0,.6);
+        border-radius: 10px;
+        padding: 30px; 
+     }
+    
+     h1{
+        font-size: 20px;
+        color: rgb(8, 16, 87);
+        text-align: center;
+        padding: 25px 0;
+    }
+    .btn, button{
+        padding: 20px;
+        border-radius: 30px;
+       
+
+    }
+}
+
+
+
+  
