--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -62,7 +62,7 @@
         <div class="buttons">
             
             <div class="list">
-                <a href="/greeted" class="btn"><button type="submit">nameList</button></a>
+                <a href="/greeted"><button type="submit">nameList</button></a>
             </div>
 
             <a href="removeName" ><button class="counterbtn" type="submit" value ="reset" name = "reset">reset</button></a>
